--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,20 @@
-# Ignorar o arquivo de variáveis de ambiente
-.env
-
-# Ignorar a pasta com dependências do Node.js
+# Dependências do Node.js
 node_modules/
 
-# Ignorar arquivos ou pastas relacionadas ao dotenv (se existirem outras específicas)
-dotenv/
+# Arquivos de log
+*.log
+
+# Arquivos de ambiente
+.env
+
+# Arquivos de sistema
+.DS_Store
+Thumbs.db
+
+# Arquivos de build e diretórios
+dist/
+build/
+
+# Arquivos de sistema do editor de código
+.idea/
+.vscode/
